...
            "state" : "translated",
            "value" : "隐藏转录信息"
          }
        }
      }
    },
    "History" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Verlauf"
...
            "state" : "translated",
            "value" : "个可用模型"
          }
        }
      }
    },
    "Modes" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Modi"
          }
...
            "state" : "translated",
            "value" : "搜索 App、网站或触发词…"
          }
        }
      }
    },
    "Search transcriptions..." : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Transkriptionen suchen..."
          }
...
